# OrderManagementSystem

./: Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
orders/: api_urls.py  api_views.py  forms.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_items.py  0003_alter_order_items.py
orders/templates/orders/: order_confirm_delete.html  order_form.html  order_list.html  revenue.html
